--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                         <p>The website which is seen right now is my portfolio website.<br />
                             Using : HTML,CSS,JavaScript.<br />
                             Self taught in technologies relevant for front-end development.<br />
-                            Here link to github:click
+                            Here link to github:<a href="https://github.com/sivapriya568/Portfolio-Website_SP">click</a>.
                         </p>
                     </div>
                 </div>
